Fix navigation bar overflowing on mobile

--- a/src/app/components/navigation-toolbar/navigation-toolbar.component.scss
+++ b/src/app/components/navigation-toolbar/navigation-toolbar.component.scss
@@ -3,7 +3,7 @@
 :host{
   width: 100%;
   height: 64px;
-  padding: 0 16px;
+  padding: 0 24px;
   box-sizing: border-box;
   display: flex;
   align-items: center;
@@ -11,8 +11,8 @@
 
   .logo{
     height: 16px;
-    margin-left: 16px;
     margin-right: 8px;
+    outline: none;
   }
 
   nav{
@@ -20,14 +20,15 @@
   }
 
   @media screen and (max-width: $breakpoint-mobile){
-    padding: 0 8px;
-
-    .logo{
-      height: 14px;
-    }
+    padding: 0 12px;
 
     nav{
-      margin-left: 16px;
+      margin-left: 6px;
+
+      .btn{
+        min-width: 50px;
+        padding: 0 8px;
+      }
     }
   }
 }
