--- a/src/styles.scss
+++ b/src/styles.scss
@@ -161,7 +161,6 @@ hr.small{
 }
 
 .btn svg{
-  height: 14px;
   fill: var(--color-text-headings);
 }
 
